--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ __pycache__/
 .Python
 build/
 develop-eggs/
-dist/
 downloads/
 eggs/
 .eggs/
@@ -110,3 +109,6 @@ logs/*
 !logs/.gitkeep
 uploads/*
 !uploads/.gitkeep
+
+# Nacos
+nacos-data/
